# src/index.js
@@ -1,16 +1,18 @@
 const config = require('./config');
 const express = require('express');
+const cors = require('cors');
 const helmet = require('helmet');
 const morgan = require('morgan');
 const { serve, setup } = require('./utils/swagger');
 
 const app = express();
+app.use(cors());
 app.use(helmet());
 app.use(morgan('common'));
 app.use('/api-docs', serve, setup);
 app.get('/', (_, res) => res.redirect('/api-docs'));
 app.use(express.json());
-app.use(require('./routes/url.routes'));
+app.use('/api/url', require('./routes/url.routes'));
 
 app.use((error, _, res, __) => {
   res.status(error.status || 500);
